added -Djdk.attach.allowAttachSelf to pass jmockit tests
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>