@@ -186,6 +186,9 @@
                     </systemPropertyVariables>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
+                    <argLine>
+                        -Djdk.attach.allowAttachSelf
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -248,6 +251,7 @@
                             <forkCount>1</forkCount>
                             <reuseForks>true</reuseForks>
                             <argLine>
+                                -Djdk.attach.allowAttachSelf
                                 --add-reads java.base=java.desktop
                                 --add-modules java.xml.bind
                                 --upgrade-module-path ${endorsed.dir}</argLine>
